Fix alignment in hero unit

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -13,30 +13,41 @@ section#hero {
   color: white;
 }
 
+@mixin vertical-align {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+     -moz-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+       -o-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
 .page {
-  display: table;
   width: 100%;
   height: 100%;
-  padding: 40px 0;
   background: rgba(34, 34, 34, .3);
 }
 
 .wrapper {
   padding: 0px;
-  display: table-cell;
   vertical-align: middle;
   height: 100%;
+
+  .container {
+    @include vertical-align;
+  }
 }
 
 .arrow-down {
+  position: absolute;
+  bottom: 60px;
   display: block;
   text-align: center;
-  bottom: 40px;
   width: 100%;
 }
 
 a.scroll i {
   color: white;
-  font-size: 3em;
-  line-height: 3em;
+  font-size: 1.5em;
 }
